--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,7 +1,7 @@
 {
   "INICIAR_SESION":"Iniciar sesión",
-  "REGISTRARME":"¿No tienes cuenta? Registrate.",
-  "RECUPERAR_CONTRASENA":"¿Problemas de acceso? Recuperar contraseña",
+  "REGISTRARME":"Registrate.",
+  "RECUPERAR_CONTRASENA":"Recuperar contraseña",
   "PRUEBA_EYEPAYCASH": "Prueba EYEPAYCASH",
   "TRANSACCION":"Transacción",
   "HISTORIAL":"Historial",
