--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
   "INICIAR_SESION":"Iniciar sesión",
-  "REGISTRARME":"Registrate.",
+  "REGISTRARME":"Registrate",
   "RECUPERAR_CONTRASENA":"Recuperar contraseña",
   "PRUEBA_EYEPAYCASH": "Prueba EYEPAYCASH",
   "TRANSACCION":"Transacción",
