--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,5 +10,84 @@
   "INICIO":"Home",
   "MI_CUENTA":"My account",
   "SEGURIDAD":"Security",
-  "CERRAR_SESION":"Log Out"
+  "CERRAR_SESION":"Log Out",
+  "SELECCIONAR_EL_PAIS_DE_DESTINO":"Select the country of destination",
+  "PRECIO_DEL_DOLAR_EN_EL_PAIS": "Price of the dollar in the country",
+  "INFORMACION_DE_LA_MONEDA": "Currency information",
+  "INFORMACION_PERSONAL": "Personal information",
+  "NOMBRES": "Names",
+  "APELLIDOS": "Last names",
+  "GENERO": "Genre",
+  "EDITAR_INFORMACION": "Edit information",
+  "INFORMACION_DE_CUENTA": "Account information",
+  "EMAIL": "Email",
+  "TELEFONO": "Phone",
+  "REENVIAR_CONFIRMACION_MOVIL": "Resend mobile confirmation",
+  "REENVIAR_CONFIRMACION_EMAIL": "Resend email confirmation",
+  "CONFIRMAR_EMAIL": "Confirm email",
+  "CANCELAR": "Cancel",
+  "CONFIRMAR_CODIGO_TELEFONO": "Confirm phone code",
+  "INFORMACION_DE_UBICACION": "Information location",
+  "PAIS": "Country",
+  "CODIGO_DE_TELEFONO": "Telephone code",
+  "CODIGO_DE_PAIS": "Country code",
+  "MONEDA_DE_PAIS": "Currency of the country",
+  "INFORMACION_SEGURIDAD": "Information security",
+  "NUMERO_CELULAR": "Cellphone number",
+  "NUEVO_CELULAR": "Select the country and enter your new cell number",
+  "DIRECCION_EMAIL": "Email address",
+  "ACTUALIZAR_EMAIL": "Update email",
+  "NUEVA_DIRECCION_EMAIL": "Please enter the new email address",
+  "CODIGO_VERIFICACION_SMS": "Enter the verification code (SMS)",
+  "VERIFICAR_CODIGO": "Verify the code",
+  "ACTUALIZAR_CONTRASEÑA":"Update password",
+  "CONTRASEÑA_ACTUAL": "Current password",
+  "NUEVA_CONTRASEÑA": "New password",
+  "CONFIRMACION_CONTRASEÑA": "Confirm password",
+  "ENVIAR_CODIGO_VERIFICACION": "Send verification code",
+  "CONFIRMAR_ACTUALIZAR": "Confirm and update",
+  "SALDO_POR_PAGAR": "Balance payable",
+  "SOLICITADAS": "Requested",
+  "POR_PAGAR": "For paying",
+  "RETIRADAS": "Withdrawn",
+  "MENSAJE_BIENVENIDA": "Welcome to Eyepaycash",
+  "FONDOS_SLIDE": "For you recive funds slide to the right and for you to send them funds slide to the left",
+  "TRANSACCIONES_ENVIADAS": "You do not have transactions send yet",
+  "TRANSACCIONES_RECIBIDAS": "You do not have tansactions received yet",
+  "RESUMEN_HISTORIAL" : "Summary of the transaction",
+  "INFORMACION_TRANSACCION": "State of the transaction",
+  "TRANSACCION_SOLICITADA": "Transaction required",
+  "REALIZAR_PAGO": "Make payment (address or QR)",
+  "HACER_RETIRO_EFECTIVO": "Make cash withdraw",
+  "VER_MAPA": "See map",
+  "INFO_TRANSACCION": "Transaction information",
+  "NRO_CELULAR_DESTINO": "Destination cell phone number",
+  "TIPO_CRIPTOMONEDA": "Cryptocurrency",
+  "FECHA_TRANSACCION": "Date transaction",
+  "MONEDA_LOCAL": "Local currency",
+  "TRM": "TRM",
+  "COSTO": "Cost",
+  "COSTO_BITCOIN": "Cost",
+  "INFORMACION_PAGO": "Payment infromation",
+  "TOTAL_A_PAGAR": "Total to pay",
+  "DIRECCION_PAGO_BITCOIN": "Payment address",
+  "COPIAR": "Copy",
+  "CODIGO_QR_PAGO": "Payment QR code",
+  "FEMENINO": "Female",
+  "MASCULINO": "Male",
+  "CONTRASEÑA": "Password",
+  "REGISTRARSE": "Check in",
+  "POLITICAS_USO": "I read and I accept the polices of use and privacy of information",
+  "INGRESE_CELULAR": "Enter your cell phone", 
+  "INGRESE_CODIGO_VERIFICACION": "Enter your verification code",
+  "ENVIAR_MENSAJE": "Send message",
+  "CONFIRMAR_CODIGO": "Confirm code",
+  "RECUPERAR_X_EMAIL": "Recover by email",
+  "INGRESE_EMAIL": "Enter your email",
+  "ENVIAR_EMAIL": "Send email",
+  "RECUPERAR_X_SMS": "Recover by SMS",
+  "MENSAJE_CODIGO_VERIFICACION1": "We send a verification CODE to the phone ",
+  "MENSAJE_CODIGO_VERIFICACION2": "that you registered below",
+  "CONFIRMAR_CELULAR": "Confirm cell number",
+  "CONTINUAR": "Continue"
 }
