--- a/www/assets/i18n/es.json
+++ b/www/assets/i18n/es.json
@@ -34,7 +34,7 @@
   "MONEDA_DE_PAIS": "Moneda de país",
   "INFORMACION_SEGURIDAD": "Información de seguridad",
   "NUMERO_CELULAR": "Número celular",
-  "NUEVO_CELULAR": "Seleccione el paìs e ingrese su nuevo número celular",
+  "NUEVO_CELULAR": "Seleccione el país e ingrese su nuevo número celular",
   "DIRECCION_EMAIL": "Dirección email",
   "ACTUALIZAR_EMAIL": "Actualizar email",
   "NUEVA_DIRECCION_EMAIL": "Por favor ingrese la nueva dirección email",
