--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -41,7 +41,7 @@
   "CODIGO_VERIFICACION_SMS": "Ingrese el código de verificación (SMS)",
   "VERIFICAR_CODIGO": "Verificar código",
   "ACTUALIZAR_CONTRASEÑA": "Actualizar contraseña",
-  "CONTRASEÑA_ACUTAL": "Contraseña actual",
+  "CONTRASEÑA_ACTUAL": "Contraseña actual",
   "NUEVA_CONTRASEÑA": "Nueva contraseña",
   "CONFIRMACION_CONTRASEÑA": "Confirmación de contraseña",
   "ENVIAR_CODIGO_VERIFICACION": "Enviar código de verificación",
